--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -27,6 +27,18 @@
     <ClInclude Include="Src\Assert.h">
       <Filter>Src</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Dump.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MemLeakDetect.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\StrUtil.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Logger.h">
+      <Filter>Src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PCH.cpp" />
@@ -43,6 +55,15 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\Core.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Dump.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\StrUtil.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Logger.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
