--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Src\Logger.h">
       <Filter>Src</Filter>
     </ClInclude>
+    <ClInclude Include="Src\CriticalSection.h">
+      <Filter>Src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PCH.cpp" />
