--- a/Network/Network.vcxproj.filters
+++ b/Network/Network.vcxproj.filters
@@ -1,16 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Network.cpp" />
-    <ClCompile Include="Session.cpp" />
-    <ClCompile Include="SessionMgr.cpp" />
-    <ClCompile Include="Listener.cpp" />
+    <ClCompile Include="PCH.cpp" />
+    <ClCompile Include="Src\Session.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\SessionMgr.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Listener.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Network.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\IOCP.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Network.h" />
-    <ClInclude Include="Session.h" />
-    <ClInclude Include="SessionMgr.h" />
-    <ClInclude Include="Listener.h" />
-    <ClInclude Include="NetLib.h" />
+    <ClInclude Include="PCH.h" />
+    <ClInclude Include="Src\Network.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Session.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\SessionMgr.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Listener.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h" />
+    <ClInclude Include="Src\IOCP.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Src">
+      <UniqueIdentifier>{a5c188dd-ab8c-407c-9103-69ad2b5b9a50}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
