--- a/Network/Network.vcxproj
+++ b/Network/Network.vcxproj
@@ -164,7 +164,7 @@
     </ClCompile>
     <ClCompile Include="Src\Listener.cpp" />
     <ClCompile Include="Src\Network.cpp" />
-    <ClCompile Include="Src\IOCP.cpp" />
+    <ClCompile Include="Src\NetWorker.cpp" />
     <ClCompile Include="Src\Session.cpp" />
     <ClCompile Include="Src\SessionMgr.cpp" />
   </ItemGroup>
@@ -173,7 +173,7 @@
     <ClInclude Include="Src\Defines.h" />
     <ClInclude Include="Src\Listener.h" />
     <ClInclude Include="Src\Network.h" />
-    <ClInclude Include="Src\IOCP.h" />
+    <ClInclude Include="Src\NetWorker.h" />
     <ClInclude Include="Src\Session.h" />
     <ClInclude Include="Src\SessionMgr.h" />
     <ClInclude Include="targetver.h" />
