--- a/Network/Network.vcxproj
+++ b/Network/Network.vcxproj
@@ -166,7 +166,7 @@
     <ClCompile Include="Src\Network.cpp" />
     <ClCompile Include="Src\NetWorker.cpp" />
     <ClCompile Include="Src\Session.cpp" />
-    <ClCompile Include="Src\SessionBuffer.cpp" />
+    <ClCompile Include="Src\SessionDataQueue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PCH.h" />
@@ -175,7 +175,7 @@
     <ClInclude Include="Src\Network.h" />
     <ClInclude Include="Src\NetWorker.h" />
     <ClInclude Include="Src\Session.h" />
-    <ClInclude Include="Src\SessionBuffer.h" />
+    <ClInclude Include="Src\SessionDataQueue.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
