--- a/Network/Network.vcxproj.filters
+++ b/Network/Network.vcxproj.filters
@@ -14,7 +14,7 @@
     <ClCompile Include="Src\NetWorker.cpp">
       <Filter>Src</Filter>
     </ClCompile>
-    <ClCompile Include="Src\SessionBuffer.cpp">
+    <ClCompile Include="Src\SessionDataQueue.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -36,7 +36,7 @@
     <ClInclude Include="Src\NetWorker.h">
       <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="Src\SessionBuffer.h">
+    <ClInclude Include="Src\SessionDataQueue.h">
       <Filter>Src</Filter>
     </ClInclude>
   </ItemGroup>
